# stocker

./: .gitignore  README.md  biome.json  index.html  package.json  vite.config.ts
.github/workflows/: actions.yml
src/: vite-env.d.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/command/: config.rs  journal.rs  mod.rs  stockatking.rs  supplier.rs  supply.rs
src-tauri/src/config/: mod.rs
src-tauri/src/core/: configurator.rs  mod.rs  stocker.rs
src-tauri/src/core/domain/: mod.rs
src-tauri/src/core/domain/entities/: stock.rs
src-tauri/src/core/domain/values/: stock.rs
src-tauri/src/core/ports/: inbound.rs
src-tauri/src/core/provided_ports/: dto.rs  mod.rs  ports.rs  usecase.rs
src-tauri/src/core/required_ports/: dto.rs  mock.rs  mod.rs  persistence.rs
src-tauri/src/core/services/: mod.rs  stock.rs  stock_test.rs
src-tauri/src/core/services/stock/: journal.rs  mod.rs  stocktaking.rs  supplier.rs  supply.rs
src-tauri/src/persistence/sqlite/: jorunal.rs  journal_test.rs  migration.rs  mod.rs  stocktaking.rs  stocktaking_test.rs  supplier.rs  supplier_test.rs  supply.rs  supply_test.rs
src-tauri/src/persistence/sqlite/migrations/: 001_create_tables.sql  002_add_deleted_at_column.sql  003_quantity_int_to_real.sql  004_add_total_price_column.sql
src/app/: App.css  App.tsx  index.tsx  routes.tsx
src/app/contexts/: AppContext.ts
src/app/stores/: error.ts
src/app/ui/: AppBar.tsx  ErrorDialog.tsx  (+2 more)
src/pages/: Error.tsx
src/shared/: errors.ts  types.ts
(+64 files in other folders)
